--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -34,6 +34,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: 32px; /* 66.667% */
+  margin: 0;
 }
 .subtitle {
   color: #f7f7f7;
@@ -42,13 +43,26 @@
   font-style: normal;
   font-weight: 600;
   line-height: 32px;
+  margin: 0;
 }
 
 .button {
   display: flex;
   width: 173px;
-  padding: 16px 60px;
+  padding: 16px 16px;
   justify-content: center;
   align-items: center;
   gap: 10px;
+  text-decoration: none;
+  border-radius: 200px;
+  background: var(--Button, #e44848);
+  color: var(--White, #fff);
+  font-family: Inter;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: -0.08px;
+  transition: background-color 0.3s ease;
+}
+.button:hover {
+  background-color: #d84343;
 }
