--- a/src/pages/CamperDetailsPage/CamperDetailsPage.module.css
+++ b/src/pages/CamperDetailsPage/CamperDetailsPage.module.css
@@ -1,49 +1,108 @@
-.wrap {
-  margin-top: 20px;
-  margin-left: 20px;
-  display: flex;
-  gap: 20px;
-}
 .container {
-  margin-top: 50px;
-  padding-top: 50px;
+  margin: 120px 64px;
 }
-.linkHome {
-  background-color: orchid;
-  color: black;
-  margin-top: 20px;
-  margin-left: 20px;
-  border: 1px solid white;
-  padding: 12px;
-  border-radius: 4px;
+.wrap {
+  margin-bottom: 60px;
 }
-img {
-  margin-top: 20px;
-  border-radius: 4px;
-  border: 1px solid white;
+.info {
+  display: flex;
+  width: 1312px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  margin-bottom: 28px;
 }
-.blockTitles {
+.subheader {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+.title {
+  color: var(--Main, #101828);
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
   margin: 0;
 }
 .text {
-  margin-top: 0;
-  margin-bottom: 8px;
-  color: white;
-  /* width: 600px; */
+  margin: 0;
 }
-
-.moreInfo {
-  margin-top: 20px;
-  padding-left: 20px;
+.starIcon {
+  color: #ffc107;
+}
+.reviews {
   display: flex;
-  gap: 15px;
+  align-items: flex-start;
+  gap: 16px;
+  color: var(--Main, #101828);
+
+  /* Body */
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  margin: 0;
+}
+.price {
+  color: var(--Main, #101828);
+
+  /* H2 */
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px; /* 133.333% */
+  margin: 0;
+}
+.description {
+  color: var(--Text, #475467);
+
+  /* Body */
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+}
+.gallery {
+  display: flex;
+  /* width: 1312px; */
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 28px;
+}
+.img {
+  width: 292px;
+  height: 312px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  object-fit: cover;
+  background: url(<path-to-image>) lightgray -57.393px -4.681px / 195.679%
+    103.001% no-repeat;
+}
+.moreInfo {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+.links {
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 40px;
+  padding: 0;
+  margin: 0;
 }
 .link {
-  border: 1px solid white;
-  border-radius: 4px;
-  padding: 10px;
-  display: flex;
-  gap: 40px;
-  color: black;
-  background-color: orchid;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 120% */
+  text-decoration: none;
+  color: var(--Main, #101828);
 }
