--- a/src/components/CampersReviews/CamperReviews.module.css
+++ b/src/components/CampersReviews/CamperReviews.module.css
@@ -1,11 +1,38 @@
 .container {
-  margin-bottom: 20px;
-  padding-bottom: 5px;
-  margin-left: 20px;
+  display: flex;
+  width: 631px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 44px;
 }
-.noReviews {
-  color: white;
+.list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
-.review {
-  color: white;
+.avatar {
+  width: 60px;
+  height: 60px;
+  border-radius: 60px;
+  background: var(--Badges, #f2f4f7);
+  color: var(--Button, #e44848);
+
+  /* H2 */
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px; /* 133.333% */
+}
+.name {
+  margin: 0;
+}
+.comment {
+  color: var(--Text, #475467);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin: 0;
 }
