--- a/src/components/CampersReviews/CamperReviews.module.css
+++ b/src/components/CampersReviews/CamperReviews.module.css
@@ -10,7 +10,18 @@
   padding: 0;
   margin: 0;
 }
+.item {
+  margin-bottom: 44px;
+}
+.reviewer {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 16px;
+}
 .avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 60px;
   height: 60px;
   border-radius: 60px;
@@ -26,6 +37,12 @@
 }
 .name {
   margin: 0;
+  color: var(--Main, #101828);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
 }
 .comment {
   color: var(--Text, #475467);
@@ -35,4 +52,17 @@
   font-weight: 400;
   line-height: 24px;
   margin: 0;
+}
+.rating {
+  display: flex;
+  gap: 4px;
+}
+
+.activeStar {
+  color: #ffc107;
+  font-size: 16px;
+}
+.inactiveStar {
+  color: #f2f4f7;
+  font-size: 16px;
 }
