--- a/src/pages/CamperDetailsPage/CamperDetailsPage.module.css
+++ b/src/pages/CamperDetailsPage/CamperDetailsPage.module.css
@@ -89,12 +89,15 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 24px;
+
+  position: relative;
+  width: 100%;
 }
 .links {
   display: inline-flex;
   align-items: flex-start;
   gap: 40px;
-  padding: 0;
+  padding: 0 0 24px 0;
   margin: 0;
 }
 .link {
@@ -105,4 +108,21 @@
   line-height: 24px; /* 120% */
   text-decoration: none;
   color: var(--Main, #101828);
+  padding-bottom: 24px;
+  border-bottom: 2px solid transparent;
+  position: relative;
+}
+.links::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--Gray-light, #202122);
+  z-index: -1;
+}
+.linkActive {
+  border-bottom: 2px solid var(--Button, #e44848);
+  margin-bottom: 24px;
 }
