--- a/src/pages/CamperDetailsPage/CamperDetailsPage.module.css
+++ b/src/pages/CamperDetailsPage/CamperDetailsPage.module.css
@@ -84,20 +84,24 @@
   background: url(<path-to-image>) lightgray -57.393px -4.681px / 195.679%
     103.001% no-repeat;
 }
+
+/*  */
+/*  */
+/*  */
+
 .moreInfo {
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 24px;
-
   position: relative;
   width: 100%;
+  margin-bottom: 44px;
 }
 .links {
-  display: inline-flex;
-  align-items: flex-start;
+  display: flex;
   gap: 40px;
-  padding: 0 0 24px 0;
+  padding: 0;
   margin: 0;
 }
 .link {
@@ -105,11 +109,11 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
   text-decoration: none;
   color: var(--Main, #101828);
   padding-bottom: 24px;
-  border-bottom: 2px solid transparent;
+  border-bottom: 1px solid transparent;
   position: relative;
 }
 .links::after {
@@ -119,10 +123,9 @@
   left: 0;
   width: 100%;
   height: 1px;
-  background-color: var(--Gray-light, #202122);
+  background-color: #dadde1;
   z-index: -1;
 }
 .linkActive {
-  border-bottom: 2px solid var(--Button, #e44848);
-  margin-bottom: 24px;
+  border-bottom: 5px solid var(--Button, #e44848);
 }
