--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -54,7 +54,19 @@
   font-style: normal;
   font-weight: 600;
   line-height: 24px; /* 120% */
-  margin: 0, 0, 24px, 0;
+  margin: 0 0 24px 0;
+  position: relative;
+  padding-bottom: 24px;
+}
+
+.text::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--Gray-light, #dadde1);
 }
 
 .hiddenInput {
