--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,65 +1,34 @@
-/* .list {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+.list {
   display: flex;
-  list-style-type: none;
-  padding: 0;
-  background-color: #181717;
-  border-bottom: 1px solid #ccc;
-}
-
-.link {
-  text-decoration: none;
-  color: #efe8e8;
-  padding: 10px 20px;
-  margin: 10px 10px 10px 40px;
-  border-radius: 4px;
-  border: 1px solid white;
-}
-
-.link:hover {
-  color: #666;
-}
-
-.active {
-  font-weight: bold;
-  color: black;
-  background-color: orchid;
-} */
-
-.navbar {
-  display: flex;
+  width: 1440px;
+  padding: 24px 64px;
   align-items: center;
-  justify-content: space-between;
-  padding: 16px 24px;
-  background-color: #f8f9fa; /* Легкий серый фон, как на макете */
-  border-bottom: 2px solid #e5e5e5; /* Тонкая граница снизу */
+  gap: 450px;
+  border-bottom: 1px solid var(--Badges, #f2f4f7);
+  background: var(--Inputs, #f7f7f7);
 }
-
-.logoContainer {
-  display: flex;
-  align-items: center;
-}
-
 .logo {
-  height: 40px; /* Примерный размер логотипа, ориентируясь на макет */
+  width: 136px;
+  height: 16px;
+  flex-shrink: 0;
 }
-
-.navLinks {
+.links {
   display: flex;
-  gap: 24px; /* Расстояние между ссылками */
+  align-items: center;
+  gap: 32px;
 }
-
 .link {
-  text-decoration: none;
-  color: #212529; /* Темный цвет текста, как на макете */
-  font-size: 16px;
-  font-weight: 500; /* Полужирный шрифт */
-  transition: color 0.2s;
-}
+  color: var(--Main, #101828);
+  text-align: center;
 
-.link:hover {
-  color: #0056b3;
+  /* Body 2 */
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  text-decoration: none;
+}
+.active {
+  color: var(--Button-Hover, #d84343);
 }
