--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -7,12 +7,10 @@
   margin-bottom: 40px;
 }
 .locationText {
-  color: var(--Gray, #6c717b);
-  font-family: Inter;
+  color: var(--gray);
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
 }
 .locationForm {
   display: flex;
@@ -24,7 +22,7 @@
   align-items: flex-start;
   gap: 10px;
   border-radius: 12px;
-  background: var(--Inputs, #f7f7f7);
+  background: var(--inputs);
   border: none;
 }
 .inputWrapper {
@@ -38,7 +36,7 @@
   left: 18px;
   transform: translateY(-50%);
   pointer-events: none;
-  color: #6c717b;
+  color: var(--gray);
   width: 20px;
   height: 20px;
 }
@@ -48,12 +46,10 @@
   margin-bottom: 24px;
 }
 .text {
-  color: var(--Main, #101828);
-  font-family: Inter;
+  color: var(--main);
   font-size: 20px;
-  font-style: normal;
   font-weight: 600;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
   margin: 0 0 24px 0;
   position: relative;
   padding-bottom: 24px;
@@ -66,7 +62,7 @@
   left: 0;
   width: 100%;
   height: 1px;
-  background-color: var(--Gray-light, #dadde1);
+  background-color: var(--gray-light);
 }
 
 .hiddenInput {
@@ -82,9 +78,7 @@
 .items {
   display: flex;
   width: 360px;
-  /* flex-direction: row; */
   flex-wrap: wrap;
-  /* align-items: flex-start; */
   gap: 8px;
 }
 .item {
@@ -95,21 +89,20 @@
   align-items: center;
   gap: 8px;
   cursor: pointer;
-
   transition: border-color 0.3s ease;
   border-radius: 12px;
-  border: 1px solid var(--Gray-light, #dadde1);
+  border: 1px solid var(--gray-light);
   mix-blend-mode: multiply;
 }
 .item:hover {
-  border-color: #e44848;
+  border-color: var(--button);
 }
 .icon {
   width: 32px;
   height: 32px;
 }
 .hiddenInput:checked + .item {
-  border-color: #d84343;
+  border-color: var(--button-hover);
 }
 
 .button {
@@ -119,25 +112,18 @@
   padding: 16px 60px;
   border-radius: 200px;
   border: 0;
-  background: var(--Button, #e44848);
-  color: var(--White, #fff);
+  background: var(--button);
+  color: var(--white);
   justify-content: center;
   align-items: center;
-
-  cursor: pointer;
   text-align: center;
-
   transition: background-color 0.3s ease;
-  color: var(--White, #fff);
-
-  /* Button */
-  font-family: Inter;
+  color: var(--white);
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
   letter-spacing: -0.08px;
 }
 .button:hover {
-  background-color: #d84343;
+  background-color: var(--button-hover);
 }
