--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,8 +4,8 @@
   padding: 24px 64px;
   align-items: center;
   gap: 450px;
-  border-bottom: 1px solid var(--Badges, #f2f4f7);
-  background: var(--Inputs, #f7f7f7);
+  border-bottom: 1px solid var(--badges);
+  background: var(--inputs);
 }
 .logo {
   width: 136px;
@@ -18,15 +18,13 @@
   gap: 32px;
 }
 .link {
-  color: var(--Main, #101828);
+  color: var(--main);
   text-align: center;
-  font-family: Inter;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
   line-height: 24px;
   text-decoration: none;
 }
 .active {
-  color: var(--Button-Hover, #d84343);
+  color: var(--button-hover);
 }
