--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -5,7 +5,7 @@
 }
 .noCampers {
   font-size: 18px;
-  color: #d84343;
+  color: var(--button-hover);
   text-align: center;
   margin-top: 320px;
 }
@@ -17,10 +17,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 200px;
-  border: 1px solid var(--Gray-light, #dadde1);
-  background-color: var(--White, #fff);
+  border: 1px solid var(--gray-light);
+  background-color: var(--white);
   cursor: pointer;
 }
 .loadMore:hover {
-  border: 1px solid #d84343;
+  border: 1px solid var(--button-hover);
 }
