--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   gap: 24px;
   border-radius: 10px;
-  border: 1px solid var(--Gray-light, #dadde1);
+  border: 1px solid var(--gray-light);
 }
 .titles {
   display: flex;
@@ -15,19 +15,15 @@
   gap: 8px;
 }
 .title {
-  color: var(--Main, #101828);
-  font-family: Inter;
+  color: var(--main);
   font-size: 20px;
-  font-style: normal;
   font-weight: 600;
   line-height: 24px;
   margin: 0;
 }
 .text {
-  color: var(--Gray, #6c717b);
-  font-family: Inter;
+  color: var(--gray);
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 24px;
   margin: 0;
@@ -51,20 +47,18 @@
   gap: 10px;
   border-radius: 12px;
   border: none;
-  background: var(--Inputs, #f7f7f7);
+  background: var(--inputs);
 }
 .button {
   display: flex;
   width: 166px;
   padding: 16px 16px;
   border-radius: 200px;
-  background: var(--Button, #e44848);
-  color: var(--White, #fff);
+  background: var(--button);
+  color: var(--white);
   justify-content: center;
   align-items: center;
-  font-family: Inter;
   letter-spacing: -0.08px;
-  cursor: pointer;
   text-align: center;
   text-decoration: none;
   margin-top: 24px;
@@ -72,8 +66,8 @@
   border: none;
 }
 .button:hover {
-  background-color: #d84343;
+  background-color: var(--button-hover);
 }
 .error {
-  color: #e44848;
+  color: var(--button-hover);
 }
