--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -4,8 +4,8 @@
   align-items: flex-start;
   gap: 24px;
   border-radius: 20px;
-  border: 1px solid var(--Gray-light, #dadde1);
-  background: var(--White, #fff);
+  border: 1px solid var(--gray-light);
+  background: var(--white);
 }
 .image {
   width: 292px;
@@ -35,25 +35,17 @@
   gap: 16px;
 }
 .starIcon {
-  color: #ffc107;
+  color: var(--rating);
 }
-/* .likeIcon {
-  border: none;
-  background-color: none;
-} */
+
 .description {
   display: -webkit-box;
   width: 525px;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   overflow: hidden;
-  color: var(--Text, #475467);
-  /* text-overflow: ellipsis; */
-  font-family: Inter;
-  /* font-size: 16px;
-  font-style: normal;
-  font-weight: 400; */
-  line-height: 24px; /* 150% */
+  color: var(--text);
+  line-height: 24px;
 }
 .features {
   display: flex;
@@ -69,7 +61,7 @@
   align-items: center;
   gap: 8px;
   border-radius: 100px;
-  background: var(--Badges, #f2f4f7);
+  background: var(--badges);
   mix-blend-mode: multiply;
 }
 .favoriteButton {
@@ -79,7 +71,7 @@
 }
 
 .likeIconActive {
-  color: #e44848;
+  color: var(--button);
 }
 
 .moreButton {
@@ -87,11 +79,10 @@
   width: 166px;
   padding: 16px 16px;
   border-radius: 200px;
-  background: var(--Button, #e44848);
-  color: var(--White, #fff);
+  background: var(--button);
+  color: var(--white);
   justify-content: center;
   align-items: center;
-  font-family: Inter;
   letter-spacing: -0.08px;
   cursor: pointer;
   text-align: center;
@@ -101,5 +92,5 @@
   border: none;
 }
 .moreButton:hover {
-  background-color: #d84343;
+  background-color: var(--button-hover);
 }
