--- a/src/components/CampersFeatures/CampersFeatures.module.css
+++ b/src/components/CampersFeatures/CampersFeatures.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   gap: 100px;
   border-radius: 10px;
-  background: var(--Inputs, #f7f7f7);
+  background: var(--inputs);
 }
 .list {
   display: flex;
@@ -26,7 +26,7 @@
   align-items: center;
   gap: 8px;
   border-radius: 100px;
-  background: var(--Gray-100, #f2f4f7);
+  background: var(--badges);
   mix-blend-mode: multiply;
 }
 .details {
@@ -37,13 +37,23 @@
   gap: 24px;
 }
 .detailsTitle {
-  color: var(--Main, #101828);
-  font-family: Inter;
+  color: var(--main);
   font-size: 20px;
-  font-style: normal;
   font-weight: 600;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
   margin: 0;
+  position: relative;
+  padding-bottom: 24px;
+  width: 100%;
+}
+.detailsTitle::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--gray-light);
 }
 .detailsForm {
   list-style-type: none;
@@ -53,29 +63,16 @@
   justify-content: space-between;
   align-items: flex-start;
   align-self: stretch;
-  color: var(--Main, #101828);
+  color: var(--main);
   text-align: center;
-
-  /* Body 2 */
-  font-family: Inter;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
 }
 .detailsLabel {
   justify-content: space-between;
   align-items: flex-start;
   align-self: stretch;
-  /* color: var(--Main, #101828);
-  text-align: center;
-
- 
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px;  */
 }
 .detailsList {
   padding: 0;
@@ -86,15 +83,4 @@
   align-items: flex-start;
   gap: 16px;
   align-self: stretch;
-}
-.detailsData {
-  /* color: var(--Main, #101828);
-  text-align: center;
-
-
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px; */
 }
