--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,9 +3,11 @@
   background-size: cover;
   min-height: 100vh;
   background-repeat: no-repeat;
+  justify-content: center;
   display: flex;
-  width: 1440px;
+  width: 100%;
   flex-direction: column;
+  padding: 0 64px;
 }
 
 .container {
@@ -13,17 +15,13 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 40px;
-  position: absolute;
-  left: 64px;
-  top: 260px;
 }
 
 .textWraper {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 16px;
-  align-self: stretch;
 }
 
 .title {
@@ -53,7 +51,6 @@
   letter-spacing: -0.08px;
   text-align: center;
   text-decoration: none;
-  margin-top: 24px;
   transition: background-color 0.3s ease;
   border: none;
 }
