--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "modern-normalize/modern-normalize.css";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import "react-datepicker/dist/react-datepicker.css";
 
 body {
   display: flex;
